--- a/themes/themeDeYannick/layouts/partials/script.html
+++ b/themes/themeDeYannick/layouts/partials/script.html
@@ -1,4 +1,4 @@
-<script src="/js/feather.min.js"></script>
+<script src="/bieres/js/feather.min.js"></script>
 <script>
   feather.replace();
 </script>
