--- a/themes/themeDeYannick/layouts/partials/footer.html
+++ b/themes/themeDeYannick/layouts/partials/footer.html
@@ -1,3 +1,3 @@
-<p class="footer text-center">
+<p class="footer text-center font-weight-light small">
   Copyright (c) {{ now.Format "2006"}} Yannick J.
 </p>
