attempting to fix cards width on mobile

--- a/layouts/bieres/list.html
+++ b/layouts/bieres/list.html
@@ -3,7 +3,7 @@
 <div class="row">
   {{ range .Pages.ByPublishDate.Reverse }}
   <div class="col m-5">
-    <div class="card" style="width: 20rem">
+    <div class="card">
       <a href="{{ .RelPermalink }}">
         <img
           class="card-img-top"
