--- a/layouts/bieres/single.html
+++ b/layouts/bieres/single.html
@@ -15,8 +15,20 @@
       <table class="table table-responsive">
         <tbody>
           <tr>
+            <th scope="row">Style de bière</th>
+            <td>{{ .Params.style }}</td>
+          </tr>
+          <tr>
+            <th scope="row">Taux d'alcool</th>
+            <td>{{ .Params.alcoolByVolume }}% vol. (environ)</td>
+          </tr>
+          <tr>
             <th scope="row">Méthode de brassage</th>
-            <td>{{ .Params.brewMethod }}</td>
+            <td>
+              <a href="/bieres/brassage/{{ .Params.brewMethod | urlize }}"
+                >{{ .Params.brewMethod }}</a
+              >
+            </td>
           </tr>
           <tr>
             <th scope="row">Couleur</th>
