--- a/layouts/bieres/list.html
+++ b/layouts/bieres/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<h1 class="text-center">Les bières de Yannick</h1>
+<h1 class="text-center">La gamme</h1>
 <div class="row">
   {{ range .Pages.ByPublishDate.Reverse }}
   <div class="col m-5">
