--- a/themes/themeDeYannick/layouts/_default/baseof.html
+++ b/themes/themeDeYannick/layouts/_default/baseof.html
@@ -3,8 +3,9 @@
   {{- partial "head.html" . -}}
   <body>
     {{- partial "header.html" . -}}
-    <div id="content" class="container">{{- block "main" . }}{{- end }}</div>
-    {{- partial "footer.html" . -}}
-    {{- partial "script.html" . -}}
+    <div id="content" class="container mt-4">
+      {{- block "main" . }}{{- end }}
+    </div>
+    {{- partial "footer.html" . -}} {{- partial "script.html" . -}}
   </body>
 </html>
