--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,28 @@
+:root {
+  --accent-color: #0d6efd;
+  --hover-color: #9ac2fe;
+  --contrast-color: white;
+}
+
 a {
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: var(--hover-color);
+}
+
+#nav-border {
+  background-color: var(--accent-color);
+}
+
+.nav-link {
+  background-color: var(--accent-color);
+  color: var(--contrast-color);
+}
+
+.nav-link:hover {
+  text-decoration: none;
+  color: var(--hover-color);
 }
