--- a/themes/themeDeYannick/layouts/partials/header.html
+++ b/themes/themeDeYannick/layouts/partials/header.html
@@ -3,7 +3,7 @@
         {{ range .Site.Menus.main }}
         <a class="nav-link" href="{{ .URL }}">
         {{ if .Pre }}
-        {{ $icon := printf "<i data-feather=\"%s\"></i> " .Pre | safeHTML }}
+        {{ $icon := printf "<svg width=\"1.5em\" height=\"1.5em\" fill=\"currentColor\"><use xlink:href=\"/bieres/svg/fa-solid.svg#%s\"></use></svg> " .Pre | safeHTML }}
         {{ $icon }}
         {{ end }}
         {{ $text := print .Name | safeHTML }}
