--- a/themes/themeDeYannick/layouts/partials/metadata.html
+++ b/themes/themeDeYannick/layouts/partials/metadata.html
@@ -1,9 +1,9 @@
 {{ $dateTime := .PublishDate.Format "2006-01-02" }}
 {{ $dateFormat := .Site.Params.dateFormat | default "Jan 2, 2006" }}
-<i data-feather="calendar"></i>
+{{ partial "fa-regular.html" "calendar" }}
 <time datetime="{{ $dateTime }}">{{ .PublishDate.Format $dateFormat }}</time>
 {{ with .Params.tags }}
-<i data-feather="tag"></i>
+{{ partial "fa-solid.html" "tag" }}
 {{ range . }}
 {{ $href := print (absURL "tags/") (urlize .) }}
 <a class="btn btn-sm btn-outline-dark tag-btn" href="{{ $href }}">{{ . }}</a>
