--- a/themes/themeDeYannick/layouts/partials/head.html
+++ b/themes/themeDeYannick/layouts/partials/head.html
@@ -1,10 +1,10 @@
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/bieres/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/bieres/css/icons.css">
-    <link rel="stylesheet" type="text/css" href="/bieres/css/style.css">
-    {{ $title := print .Site.Title " | " .Title }}
-    {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
-    <title>{{ $title }}</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" href="/bieres/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="/bieres/css/icons.css" />
+  <link rel="stylesheet" type="text/css" href="/bieres/css/style.css" />
+  {{ $title := print .Site.Title " | " .Title }}
+  {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
+  <title>{{ $title }}</title>
 </head>
