--- a/themes/themeDeYannick/layouts/partials/metadata.html
+++ b/themes/themeDeYannick/layouts/partials/metadata.html
@@ -3,9 +3,11 @@
 {{ partial "fa-regular.html" "calendar" }}
 <time datetime="{{ $dateTime }}">{{ .PublishDate.Format $dateFormat }}</time>
 {{ with .Params.tags }}
-{{ partial "fa-solid.html" "tag" }}
-{{ range . }}
-{{ $href := print (absURL "tags/") (urlize .) }}
-<a class="btn btn-sm btn-outline-dark tag-btn" href="{{ $href }}">{{ . }}</a>
-{{ end }}
+  {{ partial "fa-solid.html" "tag" }}
+  {{ range . }}
+    {{ $href := print (absURL "tags/") (urlize .) }}
+    <a class="btn btn-sm btn-outline-dark tag-btn" href="{{ $href }}"
+      >{{ . }}</a
+    >
+  {{ end }}
 {{ end }}
