navbar stick on top

--- a/themes/themeDeYannick/layouts/partials/header.html
+++ b/themes/themeDeYannick/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark">
+<nav class="navbar navbar-expand-md navbar-dark sticky-top">
   <div class="container-fluid">
     <span class="navbar-brand">
       {{ if $.Site.Params.icon }}
