--- a/themes/themeDeYannick/layouts/partials/head.html
+++ b/themes/themeDeYannick/layouts/partials/head.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" type="text/css" href="/bieres/css/icons.css" />
   <link rel="stylesheet" type="text/css" href="/bieres/css/style.css" />
   {{ $title := print .Site.Title " | " .Title }}
-  {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
+  {{ if .IsHome }}
+    {{ $title = .Site.Title }}
+  {{ end }}
   <title>{{ $title }}</title>
 </head>
