improved card layout

--- a/layouts/bieres/list.html
+++ b/layouts/bieres/list.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
   <h1 class="text-center">Les recettes</h1>
-  <div class="row">
+  <div class="row justify-content-center">
     {{ range .Pages.ByPublishDate.Reverse }}
-      <div class="col m-5">
-        <div class="card">
+      <div class="col-auto my-3 mx-2">
+        <div class="card h-100" style="width: 20rem;">
           <a href="{{ .RelPermalink }}">
             <img
               class="card-img-top"
