--- a/layouts/bieres/single.html
+++ b/layouts/bieres/single.html
@@ -11,7 +11,7 @@
       />
     </div>
     <br />
-    <div class="row m-3">
+    <div class="row text-center m-3">
       <blockquote class="blockquote">{{ .Description }}</blockquote>
     </div>
     <div class="row justify-content-center">
