--- a/themes/themeDeYannick/layouts/posts/list.html
+++ b/themes/themeDeYannick/layouts/posts/list.html
@@ -2,6 +2,7 @@
   <h1>{{ .Title }}</h1>
   {{ range .Pages.ByPublishDate.Reverse }}
     <h3><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
+    {{ partial "metadata.html" . }}
     <a class="summary" href="{{ .RelPermalink }}">
       <p>{{ .Summary }}</p>
     </a>
