--- a/themes/themeDeYannick/layouts/partials/header.html
+++ b/themes/themeDeYannick/layouts/partials/header.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-md navbar-dark sticky-top">
   <div class="container-fluid">
-    <span class="navbar-brand">
+    <a class="navbar-brand" href="{{ .Params.baseURL }}">
       {{ if $.Site.Params.icon }}
         {{ partial "fa-solid.html"  $.Site.Params.icon }}
       {{ end }}
       {{ .Site.Title }}
-    </span>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
