--- a/themes/themeDeYannick/layouts/_default/list.html
+++ b/themes/themeDeYannick/layouts/_default/list.html
@@ -1,9 +1,14 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
+  <h1 class="mb-5">{{ .Title }}</h1>
   {{ range .Pages.ByPublishDate.Reverse }}
-    <h3><a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
-    <a class="summary" href="{{ .RelPermalink }}">
-      <p>{{ .Summary }}</p>
-    </a>
+    <div class="mb-5">
+      <a href="{{ .RelPermalink }}">
+        <h3 class="title">{{ .Title }}</h3>
+      </a>
+      <span class="summary">
+        {{ .Summary }}
+        <a href="{{ .RelPermalink }}">{{ .Site.Params.moreText }}</a>
+      </span>
+    </div>
   {{ end }}
 {{ end }}
