--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -19,10 +19,16 @@ a:hover {
   color: var(--accent-contrast-color);
 }
 
-.nav-link {
+.nav-link,
+.navbar-brand {
   color: var(--accent-contrast-color) !important;
 }
 
-.nav-link:hover {
+.nav-link:hover,
+.navbar-brand:hover {
   color: var(--accent-hover-color) !important;
+}
+
+.summary p {
+  display: inline;
 }
